2015-04-15  Elmar Bucher <buchere@ohsu.edu>

   * khmer/doc/dev/getting-started.rst: add information for OS X
   mac port and homebrew distro users as well as Linux
   Debian and Ubuntu distro users.
   And add copyright header.

2015-04-15  Susan Steinman  <steinman.tutoring@gmail.com>

   * khmer/tests/khmer_tst_utils.py,doc/dev/a-quick-guide-to-testing.rst
      edited docstring and docs to remind people to make sure tests test
      errors correctly

2015-04-15  Michael R. Crusoe  <mcrusoe@msu.edu>

   * sandbox/make-coverage.py: tweak for importability

2015-04-15  Sherine Awad  <sherine.awad@gmail.com>

   * sandbox/make-coverage.py: restored, was deleted by accident

2015-04-15  Susan Steinman  <steinman.tutoring@gmail.com>

   * khmer/tests/test_scripts.py: changed tests that use `runscript` with
      `fail_okay=True` to use asserts to confirm the correct failure type

2015-04-15  Sarah Guermond  <sarah.guermond@gmail.com>

   * doc/dev/getting-started.rst: clarified dev communication

2015-04-15  Sarah Guermond  <sarah.guermond@gmail.com>

   * scripts/trim-low-abund.py: implemented STDOUT output, redirected
   existing print statements to STDERR, fixed existing & new PEP 8 issues 
   * tests/test_scripts.py: added test for above changes

2014-04-15  Andreas Härpfer  <ahaerpfer@gmail.com>

   * doc/conf.py: disable Sphinx smart rendering

2015-04-15  Michael R. Crusoe  <mcrusoe@msu.edu>

   * lib/hashtable.cc: remove memory leak
   * scripts/readstats.py,tests/test_scripts.py: fix PEP8 violations

2015-04-15  Susan Steinman  <steinman.tutoring@gmail.com>

   * khmer/scripts/normalize-by-median.py: pass individual arg values to 
      functions instead of ArgParse object

2015-04-15  Thomas Fenzl  <thomas.fenzl@gmx.net>

   * scripts/{count-overlap.py,readstats.py},tests/test_scripts.py: 
   added a --csv option to readstats
   updated documentation for count-overlap
   * khmer/_khmermodule.cc: fixed missing error handling 
   for hashbits_count_overlap
